# degensample_monorepo

./: README.md
degensample-backend/: API_ENDPOINTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.bot  README.md  api_docs.json
degensample-backend/abi/: payspec.json
degensample-backend/config/: payspec_contracts.json
degensample-backend/src/: api_gen.rs  app_state.rs  combined_bot.rs  lib.rs  webserver.rs
degensample-backend/src/bots/: mod.rs  payment_summary_bot.rs  vibegraph_bot.rs  webhook_trigger_bot.rs
degensample-backend/src/config/: mod.rs
degensample-backend/src/controllers/: api_key_controller.rs  mod.rs  payments_controller.rs  session_controller.rs  users_controller.rs  web_controller.rs  webhook_urls_controller.rs
degensample-backend/src/db/postgres/migrations/: 0001_create_event_indexers.up.sql  0008_agents.up.sql
degensample-backend/src/db/postgres/models/: api_key_model.rs  auth_challenges_model.rs  auth_sessions_model.rs  events_model.rs  mod.rs  payments_model.rs  premium_subscription_model.rs  users_model.rs  webhook_triggers_model.rs  webhook_urls_model.rs
degensample-backend/src/db/postgres/models/refill/: api_client_keys_model.rs  api_credit_refills_model.rs  api_workspaces_model.rs  mod.rs
degensample-backend/src/db/postgres/scripts/: migrate.rs  rollback_full.rs
degensample-backend/src/types/: chronodatetime.rs  defi_relay_webhook_payload.rs  evm_types.rs  mod.rs  pagination.rs  selected_record.rs  web3_sql.rs
degensample-backend/src/types/domains/: bytes.rs  bytes32.rs  bytes8.rs  datetime.rs  decimal.rs  eth_address.rs  h256.rs  id.rs  json.rs  mod.rs  pay_to_amounts.rs  pay_to_array.rs  uint256.rs
degensample-backend/src/util/: backend_server_error.rs  built_from_row.rs  http_request.rs  json_extract.rs  mod.rs  openai.rs  rand.rs  request.rs  rpc_network.rs  unix_day_index.rs
degensample-frontend/: API_ENDPOINTS.md  (+7 more)
(+60 files in other folders)
